--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@auth0/auth0-react": "^2.0.2",
         "file-saver": "^2.0.5",
-        "firebase": "^9.20.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.6.2",
